<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="games_achievement_hidden_desc">Keep playing to learn more.</string>
    <string name="games_achievement_hidden_name">Secret</string>
    <string name="games_achievement_list_title">Achievements</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="action_achievements">Achievements</string>
    <string name="action_disable">Disable</string>
    <string name="action_enable">Enable</string>
    <string name="action_invite_friends">Invite friends</string>
    <string name="action_leaderboards">Leaderboards</string>
    <string name="action_login">Sign in</string>
    <string name="action_logout">%1$s (Sign out)</string>
    <string name="active_research">Active research</string>
    <string name="app_disabled_message">This application is disabled and cannot be used any longer.</string>
    <string name="app_disabled_title">Application disabled</string>
    <string name="battery_not_drained_text">The phone must be connected to a charger and fully charged (100%)</string>
    <string name="battery_not_drained_title">The battery will not be drained</string>
    <string name="connect_to_wifi">The phone needs to be connected to a Wi-Fi network</string>
    <string name="contributed_time">Contributed time</string>
    <string name="contribution_interval_time">Contribution duration</string>
    <string name="data_usage">Data usage</string>
    <string name="data_usage_text">"Your device must be connected to a Wi-Fi network.
If you use a metered or paid Wi-Fi connection, you may be charged for the data usage.

For more info, check with your Internet service provider."</string>
    <string name="disabled">Disabled</string>
    <string name="disclaimer_data_charges">Your use of this service may be subject to data traffic charges depending on your data plan with your service provider.</string>
    <string name="disclaimer_privacy_consent">I consent to the Sony Mobile &lt;a href=\"http://www.sonymobile.com/privacy\">Privacy Policy&lt;/a></string>
    <string name="disclaimer_terms">The &lt;a href=http://www.sonymobile.com/terms-of-use-applications>Terms of Use&lt;/a> apply to your use of the application.</string>
    <string name="disclaimer_terms_and_privacy_consent">I consent to the Sony Mobile &lt;a href=http://www.sonymobile.com/terms-of-use-applications>Terms of Use&lt;/a> and &lt;a href=\"http://www.sonymobile.com/privacy\">Privacy Policy&lt;/a></string>
    <string name="disclaimer_terms_consent">I consent to the Sony Mobile &lt;a href=\"http://www.sonymobile.com/terms-of-use-applications\">Terms of Use&lt;/a></string>
    <string name="finish">Finish</string>
    <string name="helping_out">Helping out</string>
    <string name="label_accept">Accept</string>
    <string name="label_agree">Agree</string>
    <string name="label_decline">Decline</string>
    <string name="label_disagree">Disagree</string>
    <string name="label_open_source_label">Open source licenses</string>
    <string name="label_terms_and_conditions">Terms and Conditions</string>
    <string name="legal">Legal</string>
    <string name="more_info">More information</string>
    <string name="new_indicators">New indicators</string>
    <string name="new_power_button">New power button</string>
    <string name="no_cost_mobile_data_text">Phone must be connected to Wi-Fi network.</string>
    <string name="no_cost_mobile_data_title">There is no cost for mobile data</string>
    <string name="no_opencl">This device does not support OpenCL. This library is essential to execute jobs. Would you like to continue?</string>
    <string name="notification_contribution_time">Thanks. This device has contributed %1$s during the last 24h.</string>
    <string name="notification_service_executing_job">"Folding@Home is running.
You are contributing to scientific research."</string>
    <string name="powered_by">powered by</string>
    <string name="private_date_safe_text">"This application doesn't access your private data."</string>
    <string name="private_date_safe_title">Your private data is safe.</string>
    <string name="read_more">Read more</string>
    <string name="setup_guide">Setup guide</string>
    <string name="share">Share</string>
    <string name="sign_in_google_game_service">Sign in Google Play™ Games Services</string>
    <string name="welcome">Welcome to Folding@Home</string>
    <string name="whats_new">"What's New"</string>
    <string name="whats_new_conditions_indicator">Indicates that Wi-Fi is ready, but the phone must be connected to a charger and the battery must be 100% charged.</string>
    <string name="whats_new_contribution_status">Now you can see the required conditions status to run Folding@Home.</string>
    <string name="whats_new_disable_indicator">Indicates that the app is disabled.</string>
    <string name="whats_new_enable_indicator">Indicates that all requirements are ready.</string>
    <string name="whats_new_login">Now you can log in and upload your contributions.</string>
    <string name="whats_new_power_button">"Now it's easier to enable or disable the app. You can also see the current status of Folding@Home."</string>
    <string name="wizard_welcome_to_folding_subtitle">"Do you want to help find the cure for Alzheimer's, Parkinson's and cancer?"</string>
    <string name="wizard_welcome_to_folding_text">Your phone can perform scientific calculations while you sleep, and help Stanford University scientists find the cure for many diseases.</string>
    <string name="wifi">Wi-Fi</string>
    <string name="app_name">Folding@Home</string>
    <string name="facebook">Facebook</string>
</resources>