<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbarStyle="outsideInset" android:id="@id/fragment_wizard_welcome" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingTop="@dimen/activity_padding_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/activity_padding_horizontal" android:paddingEnd="@dimen/activity_padding_horizontal">
        <TextView android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/whats_new" android:fontFamily="sans-seriff-light" android:textAlignment="viewStart" style="@android:style/TextAppearance.DeviceDefault.Large" />
        <TextView android:textSize="@dimen/wizard_font_size_small" android:textColor="@color/sony_gray_text" android:autoLink="web" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_medium" android:text="@string/whats_new_disable_indicator" android:drawableTop="@drawable/img_step4_1" android:drawablePadding="@dimen/padding_small" android:fontFamily="sans-seriff" android:textAlignment="center" />
        <TextView android:textSize="@dimen/wizard_font_size_small" android:textColor="@color/sony_gray_text" android:autoLink="web" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_small" android:text="@string/whats_new_conditions_indicator" android:drawableTop="@drawable/img_step4_2" android:drawablePadding="@dimen/padding_small" android:fontFamily="sans-seriff" android:textAlignment="center" />
        <TextView android:textSize="@dimen/wizard_font_size_small" android:textColor="@color/sony_gray_text" android:autoLink="web" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_medium" android:text="@string/whats_new_enable_indicator" android:drawableTop="@drawable/img_step4_3" android:drawablePadding="@dimen/padding_small" android:fontFamily="sans-seriff" android:textAlignment="center" />
        <TextView android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_medium" android:text="@string/new_indicators" android:fontFamily="sans-seriff-light" android:textAlignment="viewStart" style="@android:style/TextAppearance.DeviceDefault.Large" />
        <TextView android:textSize="@dimen/wizard_font_size_small" android:textColor="@color/sony_gray_text" android:autoLink="web" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small" android:text="@string/whats_new_contribution_status" android:fontFamily="sans-seriff" android:textAlignment="viewStart" />
    </LinearLayout>
</ScrollView>