<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/fragment_wizard_welcome" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/logos_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="3.0" android:layout_alignParentBottom="true" android:paddingStart="@dimen/activity_padding_horizontal" android:paddingEnd="@dimen/activity_padding_horizontal">
        <ImageView android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/img_sony" android:adjustViewBounds="true" android:layout_weight="1.0" android:contentDescription="@string/powered_by" android:layout_marginEnd="@dimen/margin_small" />
        <ImageView android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/img_stanford" android:adjustViewBounds="true" android:layout_weight="1.0" android:contentDescription="@string/powered_by" android:layout_marginStart="@dimen/margin_small" />
    </LinearLayout>
    <TextView android:textColor="@color/sony_black" android:gravity="center" android:id="@id/in_cooperation_tv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small" android:text="@string/powered_by" android:layout_above="@id/logos_layout" android:fontFamily="sans-seriff" />
    <Button android:textSize="@dimen/text_large" android:textColor="@color/sony_black" android:gravity="center" android:id="@id/bt_wizard_read_more" android:paddingLeft="@dimen/padding_small" android:paddingRight="@dimen/padding_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small" android:layout_marginBottom="@dimen/margin_x_small" android:minWidth="@dimen/wizard_button_width" android:minHeight="@dimen/wizard_button_height" android:text="@string/read_more" android:layout_above="@id/in_cooperation_tv" android:layout_centerHorizontal="true" android:onClick="onClick" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/bt_wizard_read_more" android:layout_alignParentTop="true">
        <ImageView android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_medium" android:src="@drawable/img_step_1" android:adjustViewBounds="true" android:contentDescription="@string/app_name" android:paddingStart="@dimen/activity_padding_horizontal" android:paddingEnd="@dimen/activity_padding_horizontal" />
        <ScrollView android:scrollbarStyle="outsideInset" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/activity_padding_horizontal" android:paddingEnd="@dimen/activity_padding_horizontal">
                <TextView android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/welcome" android:fontFamily="sans-seriff-light" android:textAlignment="viewStart" style="@android:style/TextAppearance.DeviceDefault.Large" />
                <TextView android:textSize="@dimen/wizard_font_size_medium" android:textColor="@android:color/black" android:autoLink="web" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small" android:text="@string/wizard_welcome_to_folding_subtitle" android:fontFamily="sans-seriff" android:textAlignment="viewStart" />
                <TextView android:textSize="@dimen/wizard_font_size_small" android:textColor="@color/sony_gray_text" android:autoLink="web" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/wizard_welcome_to_folding_text" android:fontFamily="sans-seriff" android:textAlignment="viewStart" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>