<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/fragment_wizard_settings" android:paddingTop="@dimen/activity_padding_vertical" android:paddingBottom="@dimen/activity_padding_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_medium" android:layout_marginBottom="@dimen/margin_medium" android:src="@drawable/img_step_2" android:adjustViewBounds="true" android:contentDescription="@string/app_name" android:paddingStart="@dimen/activity_padding_horizontal" android:paddingEnd="@dimen/activity_padding_horizontal" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ScrollView android:scrollbarStyle="outsideOverlay" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/activity_padding_horizontal" android:paddingEnd="@dimen/activity_padding_horizontal">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_medium" android:layout_marginBottom="@dimen/margin_small" android:weightSum="6.0">
                    <ImageView android:layout_width="0.0dip" android:layout_height="@dimen/wizard_icon_height" android:src="@drawable/ic_info_private" android:layout_weight="1.0" android:contentDescription="@string/private_date_safe_title" />
                    <LinearLayout android:gravity="start" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="5.0">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/private_date_safe_title" android:textAlignment="viewStart" style="@style/text_title" />
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/private_date_safe_text" android:textAlignment="viewStart" style="@style/text_subtitle" />
                    </LinearLayout>
                </LinearLayout>
                <View android:background="@color/sony_gray_line" android:layout_width="fill_parent" android:layout_height="@dimen/wizard_line_height" />
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small" android:layout_marginBottom="@dimen/margin_small" android:weightSum="6.0">
                    <ImageView android:layout_width="0.0dip" android:layout_height="@dimen/wizard_icon_height" android:src="@drawable/ic_info_wifi" android:layout_weight="1.0" android:contentDescription="@string/no_cost_mobile_data_title" />
                    <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="5.0">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_cost_mobile_data_title" android:textAlignment="viewStart" style="@style/text_title" />
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_cost_mobile_data_text" android:textAlignment="viewStart" style="@style/text_subtitle" />
                    </LinearLayout>
                </LinearLayout>
                <View android:background="@color/sony_gray_line" android:layout_width="fill_parent" android:layout_height="@dimen/wizard_line_height" />
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small" android:layout_marginBottom="@dimen/margin_small" android:weightSum="6.0">
                    <ImageView android:layout_width="0.0dip" android:layout_height="@dimen/wizard_icon_height" android:src="@drawable/ic_info_battery" android:layout_weight="1.0" android:contentDescription="@string/battery_not_drained_title" />
                    <LinearLayout android:gravity="start" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="5.0">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_not_drained_title" android:textAlignment="viewStart" style="@style/text_title" />
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_not_drained_text" android:textAlignment="viewStart" style="@style/text_subtitle" />
                    </LinearLayout>
                </LinearLayout>
                <View android:background="@color/sony_gray_line" android:layout_width="fill_parent" android:layout_height="@dimen/wizard_line_height" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>